<resources>

    <string name="app_name">BandA</string>

    <string name="sign_in_with">Sign in with</string>
    <string name="o">Or</string>
    <string name="enter_email_address">Enter email address</string>
    <string name="forgot">Forgot?</string>
    <string name="sign_in">Sign in</string>
    <string name="register">Register</string>
    <string name="do_not_have_an_account">Do not have an account?</string>
    <string name="sign_up_now">Sign Up Now</string>
    <string name="title_activity_login">Sign in</string>
    <string name="email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="reenter_password">Re enter password</string>
    <string name="fields_are_empty">Fields are empty</string>
    <string name="sign_up_unsuccessful">Sign Up Unsuccessful</string>
    <string name="error_ocurred">Error ocurred</string>
    <string name="error_occurred">Error Occurred</string>
    <string name="not_registered">Not registered? Sign up here.</string>
    <string name="you_are_logged_in">You are logged in!</string>
    <string name="please_login">Please login</string>
    <string name="logout">Logout</string>
    <string name="send_my_password">Send my password</string>
    <string name="forgot_password">Forgot password</string>
    <string name="password_sent_to_your_email">Password sent to your email</string>
    <string name="facebook_app_id">470809057116879</string>
    <string name="fb_login_protocol_scheme">fb470809057116879</string>
    <string name="user_cancelled_it">User cancelled it</string>
    <string name="could_not_register_to_firebase">Could not register to Firebase</string>
    <string name="user_and_band">User and Band</string>
    <string name="playlist">Playlists</string>
    <string name="rehearsals">Rehearsals</string>
    <string name="concerts">Concerts</string>
    <string name="settings">Settings</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="bandA">BandA</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="please_enter_a_valid_email">Please enter a valid email</string>
    <string name="minimum_length_of_password_should_be_6">Minimum length of password should be 6</string>
    <string name="you_are_already_registered">You are already registered</string>
    <string name="already_registered">Already registered? Login</string>
    <string name="tap_on_camera_to_choose_profile_picture">Tap on camera to choose profile picture</string>
    <string name="enter_display_name">Enter display name</string>
    <string name="save">Save</string>
    <string name="select_profile_image">Select profile image</string>


</resources>
